compiler-java/test/src/org/eclipse/ceylon/compiler/java/test/interop/Bug2027.ceylon
import javax.annotation {
    generated__GETTER  // error: imported declaration not found: 'generated__GETTER'
}
void bug2027(){}